changed header font and color

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,9 @@ section p {
 	color: #454545;
 }
 section h1 {
-	font: 32px 'Open Sans';
+	font: 32px 'Trirong';
 	font-weight: bold;
+	color: #639
 }
 section p {
 	font: 16px 'Open Sans';
